# evalwrf

./: .buildinfo  README.md  genindex.html  index.html  main.py  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: docs.yml  release.yml
_sources/: index.rst.txt
_sources/user_guide/: abc.rst.txt  index.rst.txt
docs/source/: conf.py
docs/source/getting_started/: index.rst
docs/source/reference/: index.rst
evalwrf/: __init__.py  _template_configuration.toml  api.py  config.py  geosphere2littler.py  klima-v2-10min_METADATA.json  klima-v2-1d_METADATA.json  klima-v2-1m_METADATA.json  mathfuncs.py  metadata.json  plotting.py  postprocess.py  preprocess.py  test-geosphere.py
getting_started/: index.html
reference/: index.html
src/evalwrf/: __init__.py  _template_configuration.toml  api.py  configuration.toml  data.py  mathfuncs.py  plotting.py  preprocess.py  test.ipynb
src/evalwrf/_old/: config.py  geosphere2litter.py  namelist.py  preprocess.py  readme.txt
src/evalwrf/config/: Datasets.json  Metadata_klima-v2-10min.json  Metadata_nwp-v1-1h-2500m.json.json
user_guide/: abc.html  index.html
