[project]
name = "evalwrf"
version = "0.1.1"
description = "A package to evaluate WRF NCAR Data"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bottleneck>=1.4.2",
    "cartopy>=0.24.1",
    "cdsapi>=0.7.5",
    "cftime>=1.6.4.post1",
    "dask>=2025.2.0",
    "geopandas>=1.0.1",
    "matplotlib>=3.10.0",
    "netcdf4>=1.7.2",
    "numpy>=2.2.3",
    "opencv-python>=4.11.0.86",
    "plotly>=6.0.0",
    "rasterio>=1.4.3",
    "xarray>=2025.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.2",
]

