[project]
name = "evalwrf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bottleneck>=1.6.0",
    "cartopy>=0.25.0",
    "colormaps>=0.4.2",
    "dask>=2025.12.0",
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "netcdf4>=1.7.3",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "tqdm>=4.67.1",
    "xarray>=2025.12.0",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
doc = [
    "pydata-sphinx-theme>=0.16.1",
    "sphinx>=9.1.0",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.7.0",
]
